crates/teleport/tests/compile-fail/missing_async.stderr
error: #[remote] functions must be async
 --> tests/compile-fail/missing_async.rs:7:1
  |
7 | fn not_async(_ctx: &AppState) -> Result<String, AppError> {
  | ^^

warning: unused import: `AppError`
 --> tests/compile-fail/missing_async.rs:1:24
  |
1 | use teleport::{remote, AppError};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
